force-app/main/default/objects/MUSW__Violation__c/fields/Additional_Details__c.field-meta.xml
<CustomField>
    <fullName>Additional_Details__c</fullName>
    <label>Additional Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>