force-app/main/default/objects/MUSW__Violation__c/fields/Days_to_correct__c.field-meta.xml
<CustomField>
    <fullName>Days_to_correct__c</fullName>
    <formula>IF( isblank(Days_to_correct_User_defined__c) , MUSW__Type__r.Days_to_correct__c, Days_to_correct_User_defined__c)</formula>
    <label>Days to correct</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>