force-app/main/default/objects/MUSW__Violation__c/fields/Days_to_correct_User_defined__c.field-meta.xml
<CustomField>
    <fullName>Days_to_correct_User_defined__c</fullName>
    <label>Days to correct - User defined</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>