force-app/main/default/objects/MUSW__Violation__c/fields/IsClosed__c.field-meta.xml
<CustomField>
    <fullName>IsClosed__c</fullName>
    <formula>IF(Contains(Text( MUSW__Status__c) , &quot;Closed&quot;),

&quot;Yes&quot;, &quot;No&quot;)</formula>
    <label>Closed</label>
    <type>Text</type>
</CustomField>