force-app/main/default/objects/MUSW__Violation__c/fields/MUSW__Cited_By__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Cited_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Deprecated.</description>
    <label>Cited By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Violations_Cited</relationshipName>
    <type>Lookup</type>
</CustomField>