force-app/main/default/objects/MUSW__Violation__c/fields/MUSW__Comments__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Comments__c</fullName>
    <description>Deprecated; replaced by Description.</description>
    <label>Comments (Deprecated)</label>
    <type>TextArea</type>
</CustomField>