force-app/main/default/objects/MUSW__Violation__c/fields/MUSW__Contact__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>This contact does not match any contacts within the Responsible Party.</errorMessage>
        <filterItems>
            <field>Contact.AccountId</field>
            <operation>equals</operation>
            <valueField>$Source.MUSW__Responsible_Party__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Violations as Contact</relationshipLabel>
    <relationshipName>Violations</relationshipName>
    <type>Lookup</type>
</CustomField>