force-app/main/default/objects/MUSW__Violation__c/fields/MUSW__Corrected_Date__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Corrected_Date__c</fullName>
    <description>Date violation was actually closed (abated).</description>
    <label>Corrected Date</label>
    <type>Date</type>
</CustomField>