force-app/main/default/objects/MUSW__Violation__c/fields/MUSW__Days_Till_Corrected__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Days_Till_Corrected__c</fullName>
    <description>Used for reports.</description>
    <formula>IF( ISNULL(MUSW__Corrected_Date__c) , NULL,   (NOW() - CreatedDate) - (TODAY() - MUSW__Corrected_Date__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label># Days Till Corrected</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>