force-app/main/default/objects/MUSW__Violation__c/fields/MUSW__Estimated_Cost__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Estimated_Cost__c</fullName>
    <description>Can be used where cost recovery is estimated for violation clean up; this is not referenced in the default configuration.</description>
    <label>Estimated Cost</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>