force-app/main/default/objects/MUSW__Violation__c/fields/MUSW__Inspection_Number__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Inspection_Number__c</fullName>
    <description>This counts the number of times a violation has been inspected and reinspected; this is used in the default configuration.</description>
    <label>Inspection Number</label>
    <summaryForeignKey>MUSW__Inspection_Violation__c.MUSW__Violation__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>