force-app/main/default/objects/MUSW__Violation__c/fields/MUSW__Type__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Primary descriptor of the violation. Unlike most type fields in the system, this is a lookup to the ordinance table rather than a picklist.</description>
    <label>Ordinance Type</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>MUSW__Violation_Type__c.MUSW__Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>MUSW__Violation_Type__c</referenceTo>
    <relationshipLabel>Violations</relationshipLabel>
    <relationshipName>Violations</relationshipName>
    <type>Lookup</type>
</CustomField>