force-app/main/default/objects/MUSW__Violation__c/fields/Ordinance__c.field-meta.xml
<CustomField>
    <fullName>Ordinance__c</fullName>
    <formula>MUSW__Type__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ordinance</label>
    <type>Text</type>
</CustomField>