force-app/main/default/objects/MUSW__Violation__c/fields/Permit2__c.field-meta.xml
<CustomField>
    <fullName>Permit2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Permit</label>
    <referenceTo>MUSW__Permit2__c</referenceTo>
    <relationshipLabel>Violations</relationshipLabel>
    <relationshipName>Violations</relationshipName>
    <type>Lookup</type>
</CustomField>