force-app/main/default/objects/MUSW__Violation__c/validationRules/MUSW__Contact_Without_Responsible_Party.validationRule-meta.xml
<ValidationRule>
    <fullName>MUSW__Contact_Without_Responsible_Party</fullName>
    <active>true</active>
    <errorConditionFormula>AND( NOT( ISBLANK( MUSW__Contact__c ) ), ISBLANK( MUSW__Responsible_Party__c ) )</errorConditionFormula>
    <errorDisplayField>MUSW__Contact__c</errorDisplayField>
    <errorMessage>To add a contact to a violation the Responsible Party field cannot be left blank.</errorMessage>
</ValidationRule>