force-app/main/default/objects/MUSW__Violation__c/validationRules/MUSW__Prevent_Associate_To_Closed_Complaint.validationRule-meta.xml
<ValidationRule>
    <fullName>MUSW__Prevent_Associate_To_Closed_Complaint</fullName>
    <active>true</active>
    <description>Prevent user from associating a violation to a closed complaint</description>
    <errorConditionFormula>IF(OR(ISNEW(),ISCHANGED(MUSW__Complaint2__c)), ISPICKVAL(MUSW__Complaint2__r.MUSW__Status__c, &apos;Closed&apos;), false)</errorConditionFormula>
    <errorDisplayField>MUSW__Complaint2__c</errorDisplayField>
    <errorMessage>Cannot relate violation to a closed complaint</errorMessage>
</ValidationRule>